--- a/static/index.css
+++ b/static/index.css
@@ -10,9 +10,17 @@
     margin: 0;
 }
 
+#name {
+    background-color: #333;
+    color: var(--cw);
+    font-weight: bold;
+    font-size: 1.2rem;
+}
+
 .page {
     width: 100vw;
     height: 100vh;
+    overflow: hidden;
     display: grid;
     grid-template-columns: 1fr 3fr;
     background-color: var(--cm);
@@ -99,6 +107,33 @@ nav {
 
 .nav__list__item:hover {
     cursor: pointer;
+}
+
+main {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.main__body {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.main__body__list {
+    height: 20%;
+    overflow-y: scroll;
+}
+
+.main__body__list__item {
+    font-size: 6rem;
+}
+
+.main__body__input {
+    height: 10%;
+    font-size: 3rem;
 }
 
 .invisible {
