--- a/static/index.css
+++ b/static/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Hubballi&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;300;400;700&display=swap');
 
 :root {
     --cm: #331881;
@@ -8,6 +8,24 @@
 
 *, *::before, *::after {
     margin: 0;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: rgba(0,0,0, 0);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgba(120, 120, 120, 0.4);
+    border-radius: 10px;
+    transition: background-color 1000ms linear;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(160, 160, 160, 0.8);
 }
 
 #name {
@@ -20,16 +38,13 @@
 .page {
     width: 100vw;
     height: 100vh;
-    overflow: hidden;
-    display: grid;
-    grid-template-columns: 1fr 3fr;
     background-color: var(--cm);
     color: var(--cw);
-    font-family: 'Hubballi', cursive;
+    font-family: 'Roboto Mono', monospace;
 }
 
 .add-project-prompt {
-    z-index: 1;
+    z-index: 3;
     display: flex;
     position: fixed;
     top: 0;
@@ -41,9 +56,38 @@
     align-items: center;
 }
 
-nav {
+.open-menu {
+    position: fixed;
+    z-index: 2;
+    top: 0.4rem;
+    left: 0.4rem;
+}
+
+.burger-menu {
     display: flex;
     flex-direction: column;
+}
+
+.burger-menu:hover {
+    cursor: pointer;
+}
+
+.burger-menu > span {
+    width: 3rem;
+    height: 0.2rem;
+    margin: 0.4rem 0;
+    background-color: var(--cw);
+    border-radius: 0.2rem;
+}
+
+nav {
+    z-index: 1;
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    background-color: var(--cm);
     border-right: 2px solid var(--ca);
     box-shadow: 2px 0 16px rgba(0,0,0, 0.6);
 }
@@ -111,29 +155,51 @@ nav {
 
 main {
     height: 100vh;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-rows: 1fr auto 1fr;
+    grid-template-columns: 1fr;
+    margin: 0 1rem;
 }
 
-.main__body {
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.main__header {
+    text-align: center;
 }
 
-.main__body__list {
-    height: 20%;
+.main__header__title {
+    text-align: center;
+    font-size: 3rem;
+}
+
+.main__list {
+    font-size: 2rem;
+    overflow-x: hidden;
     overflow-y: scroll;
 }
 
-.main__body__list__item {
-    font-size: 6rem;
+.main__list__item {
+    text-align: center;
+    overflow-wrap: break-word;
 }
 
-.main__body__input {
-    height: 10%;
-    font-size: 3rem;
+.main__input {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 1rem 0;
+}
+
+.main__input > input {
+    padding: 1rem 1rem;
+    font-size: 1.2rem;
+    border: none;
+    border-radius: 0;
+    box-shadow: 0 0 6px rgba(0,0,0, 0.6);
+}
+
+.main__input > input:focus {
+    box-shadow: inset 0 0 8px rgba(0,0,0, 0.6);
+    outline: none;
+    border: none;
 }
 
 .invisible {
