--- a/static/index.css
+++ b/static/index.css
@@ -60,7 +60,7 @@
     position: fixed;
     z-index: 2;
     top: 0.4rem;
-    left: 0.4rem;
+    left: 0.8rem;
 }
 
 .burger-menu {
@@ -184,7 +184,7 @@ main {
 .main__input {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: end;
     margin: 1rem 0;
 }
 
